fixed z-index on nav

--- a/css-folder/style.css
+++ b/css-folder/style.css
@@ -24,6 +24,7 @@ nav {
   width: 100%;
   top: 0;
   position: fixed;
+  z-index: 1;
 }
 
 .md-logo {
